[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Dart.png" type="Texture" id=1]
[ext_resource path="res://DartTrap/DartTrap.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.254902 )

[node name="DartTrap" type="Spatial"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Darts" type="Spatial" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.202408, 0 )

[node name="Dart" type="Sprite3D" parent="Darts"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="Dart2" type="Sprite3D" parent="Darts"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 1.28945, 0.156519, 0 )
texture = ExtResource( 1 )

[node name="Dart3" type="Sprite3D" parent="Darts"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.606161, 0.364486, 0 )
texture = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 3, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -3, 0.2, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
